pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-demo
spec:
  containers:
  - name: nodejs-demo
    image: ankittiwaridws/nodejsdemo:0.1
    ports:
    - containerPort: 5000
